# LayerEditor

./: CMakeLists.txt  fake_processor.cpp  las2.json  layereditorwidget.cpp  layereditorwidget.h  layout_04-12-2024_00-14-57.json  layout_example.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processordialog.cpp  processordialog.h  processordialog.ui  test.json
database/: CMakeLists.txt  layers.db  layers.db.sqbpro
database/src/: UndoRedoManager.cpp  UndoRedoManager.h  database.cpp  database.h  databasecontroller.cpp  databasecontroller.h  layers.db.sqbpro
helpSystem/: CMakeLists.txt
helpSystem/src/: HelpSystem.cpp  HelpSystem.h
layoutEditorWidget/: CMakeLists.txt
layoutEditorWidget/src/: layereditorwidget.cpp  layereditorwidget.h
processDialog/: CMakeLists.txt
processDialog/src/: processordialog.cpp  processordialog.h  processordialog.ui
processor/: CMakeLists.txt
processor/src/: GeometryOperations.cpp  LayerOperations.cpp  LayerOperations.h  Oshmetkov.cpp
umformer/: CMakeLists.txt
umformer/src/: Entity.cpp  Entity.h  Umformer.cpp  Umformer.h  umformer.cpp  umformer.h
